updates jupyter notebook results

--- a/solving_60q_peak_circuit.ipynb
+++ b/solving_60q_peak_circuit.ipynb
@@ -7,7 +7,7 @@
    "source": [
     "# 🧠 Lightweight solution to a 'Peak' Quantum Circuit with Tensor Networks\n",
     "\n",
-    "This notebook was developed during a quantum hackathon hosted by BlueQubit, a Series A startup focused on making quantum computing accessible across various platforms. Their toolset allows for a unified development environment, abstracting hardware and simulators so teams can focus on circuit logic.\n",
+    "This notebook was developed after a quantum hackathon hosted by BlueQubit, a Series A startup focused on making quantum computing accessible across various platforms. Their toolset allows for a unified development environment, abstracting hardware and simulators so teams can focus on circuit logic.\n",
     "\n",
     "Our objective here is to simulate a 60-qubit quantum circuit where one dominant bitstring occurs with O(1) probability, while all others are exponentially less likely. We use tensor networks to do this efficiently, with help from:\n",
     "\n",
@@ -200,7 +200,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 6,
    "id": "2df6db83-836d-47d5-9b07-ab7f7994f911",
    "metadata": {},
    "outputs": [
@@ -208,18 +208,8 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Setting up contraction optimizer...\n"
-     ]
-    },
-    {
-     "ename": "NameError",
-     "evalue": "name 'time' is not defined",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mNameError\u001b[0m                                 Traceback (most recent call last)",
-      "Cell \u001b[0;32mIn[2], line 3\u001b[0m\n\u001b[1;32m      1\u001b[0m \u001b[38;5;66;03m# Setup the contraction optimizer using cotengra.\u001b[39;00m\n\u001b[1;32m      2\u001b[0m \u001b[38;5;28mprint\u001b[39m(\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mSetting up contraction optimizer...\u001b[39m\u001b[38;5;124m\"\u001b[39m)\n\u001b[0;32m----> 3\u001b[0m opt_start \u001b[38;5;241m=\u001b[39m \u001b[43mtime\u001b[49m\u001b[38;5;241m.\u001b[39mperf_counter()\n\u001b[1;32m      4\u001b[0m opt \u001b[38;5;241m=\u001b[39m ctg\u001b[38;5;241m.\u001b[39mReusableHyperOptimizer(\n\u001b[1;32m      5\u001b[0m     parallel\u001b[38;5;241m=\u001b[39m\u001b[38;5;28;01mTrue\u001b[39;00m,\n\u001b[1;32m      6\u001b[0m     optlib\u001b[38;5;241m=\u001b[39m\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124moptuna\u001b[39m\u001b[38;5;124m\"\u001b[39m,\n\u001b[0;32m   (...)\u001b[0m\n\u001b[1;32m      9\u001b[0m     progbar\u001b[38;5;241m=\u001b[39m\u001b[38;5;28;01mTrue\u001b[39;00m,\n\u001b[1;32m     10\u001b[0m )\n\u001b[1;32m     11\u001b[0m opt_end \u001b[38;5;241m=\u001b[39m time\u001b[38;5;241m.\u001b[39mperf_counter()\n",
-      "\u001b[0;31mNameError\u001b[0m: name 'time' is not defined"
+      "Setting up contraction optimizer...\n",
+      "Done setting up contraction optimizer.\n"
      ]
     }
    ],
@@ -240,6 +230,36 @@
   },
   {
    "cell_type": "markdown",
+   "id": "921c1200-2344-4a15-a319-1faf40f2d751",
+   "metadata": {},
+   "source": [
+    "### 🎯 Define Target Bitstring\n",
+    "\n",
+    "This bitstring is expected to dominate the probability distribution after circuit execution. Including it allows us to verify our majority vote or compare results from simulation to theoretical expectations.\n",
+    "\n",
+    "> Optional, but handy for debugging and benchmarking against known expected outcomes.\n",
+    "\n",
+    "Sets a number of variables that can be changed depending on computational power available. Below are parameters for lightweight computation.\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "id": "83c56bca-b58d-42b9-8abc-70adce015272",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Define target bitstring and number of qubits.\n",
+    "target_bitstring = \"110101001011010101111001011100001110101101111010100110110001\"\n",
+    "num_qubits = 60\n",
+    "sample_size = 1\n",
+    "group_size = 5\n",
+    "simplify_sequence = \"ADCRS\"\n",
+    "subset_num_qubits = 1  # One sample per batch."
+   ]
+  },
+  {
+   "cell_type": "markdown",
    "id": "78ef3c50",
    "metadata": {},
    "source": [
@@ -252,45 +272,43 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 8,
    "id": "2cfdbf5b-a5a6-4833-b287-21c869870ea5",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Optimizing contraction path...\n",
+      "Contraction path optimization took 2 minutes 17.19 seconds.\n"
+     ]
+    }
+   ],
    "source": [
     "# Rehearse the sampling path (pre-optimizes contraction paths for each marginal).\n",
     "print(\"Optimizing contraction path...\")\n",
     "path_opt_start = time.perf_counter()\n",
     "rehs = tensor_network_circuit.sample_gate_by_gate_rehearse(\n",
-    "    group_size=10,\n",
+    "    group_size=group_size,\n",
     "    optimize=opt,\n",
-    "    simplify_sequence=\"ADCRS\"  # Using \"ADCRS\" for simplification.\n",
+    "    simplify_sequence=simplify_sequence  # Using \"ADCRS\" for simplification.\n",
     ")\n",
     "path_opt_end = time.perf_counter()\n",
     "print(f\"Contraction path optimization took {format_time(path_opt_end - path_opt_start)}.\")"
    ]
   },
   {
-   "cell_type": "markdown",
-   "id": "0188e88a",
-   "metadata": {},
-   "source": [
-    "### 🎯 Define Target Bitstring\n",
-    "\n",
-    "This bitstring is expected to dominate the probability distribution after circuit execution. Including it allows us to verify our majority vote or compare results from simulation to theoretical expectations.\n",
-    "\n",
-    "> Optional, but handy for debugging and benchmarking against known expected outcomes."
-   ]
-  },
-  {
    "cell_type": "code",
-   "execution_count": null,
-   "id": "862246c0-a943-4fa1-8d92-d9fbb5e78cd0",
+   "execution_count": 9,
+   "id": "faf4150c-310d-446c-ad27-46b7e90be39d",
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Define target bitstring and number of qubits.\n",
-    "target_bitstring = \"110101001011010101111001011100001110101101111010100110110001\"\n",
-    "num_qubits = 60"
+    "# Delete any previous entries in the file.\n",
+    "output_file = \"./tensor_networks/samples.txt\"\n",
+    "with open(output_file, \"w\") as f:\n",
+    "    f.write(\"\")  # Clear file contents."
    ]
   },
   {
@@ -307,10 +325,39 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 10,
    "id": "305202ce-8d6f-4245-ba67-14aa0db5ae4c",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Starting continuous sampling and appending to file...\n",
+      "Sample 1: 101000001001100100101000111101110111101000111010100011010110 (took 1 minutes 26.65 seconds)\n",
+      "Sample 2: 111110010011000101110001011101101110100011101000100110001001 (took 1 minutes 26.07 seconds)\n",
+      "Sample 3: 110101001011010101111001011100001110101101111010100110110001 (took 1 minutes 26.60 seconds)\n",
+      "Sample 4: 110101101001100000011100001000000111001100110011100010010001 (took 1 minutes 27.22 seconds)\n",
+      "Sample 5: 111000101011110101111101011100000010001111001011000110110001 (took 1 minutes 26.87 seconds)\n",
+      "Sample 6: 100101101001110001111101010100000000001111000010100011111001 (took 1 minutes 27.04 seconds)\n",
+      "Sample 7: 100111111001010110101101110110101011101111111101110010101001 (took 1 minutes 27.69 seconds)\n",
+      "Sample 8: 111101000011001001101100011100001110101100111011100110110100 (took 1 minutes 25.93 seconds)\n",
+      "Sample 9: 110101001001010001101111011100001111001001111010100110110110 (took 1 minutes 25.21 seconds)\n",
+      "Sample 10: 101000101001110100110010010101110110001111000010110111111001 (took 1 minutes 27.01 seconds)\n",
+      "Processed 10 samples in 14 minutes 26.30 seconds.\n",
+      "Sample 11: 011001001011011101010001001111101110110001101000101110000000 (took 1 minutes 26.87 seconds)\n",
+      "Sample 12: 110101001011010100110001010101111110001001101011100110010000 (took 1 minutes 27.45 seconds)\n",
+      "Sample 13: 010111011011110111011011011110001010001111011010101101100100 (took 1 minutes 26.78 seconds)\n",
+      "Sample 14: 110001101011001101110011111100001110101001101010110010110101 (took 1 minutes 26.01 seconds)\n",
+      "Sample 15: 111100000001001100110001011100100011000101111010100110010000 (took 1 minutes 24.84 seconds)\n",
+      "Sample 16: 110110011011110001111100000101101011111001100000101110010111 (took 1 minutes 27.73 seconds)\n",
+      "Sample 17: 010111001011010101011011001001001110100011111010100110001101 (took 1 minutes 27.45 seconds)\n",
+      "\n",
+      "Target bitstring achieved after 17 samples in 24 minutes 33.44 seconds.\n",
+      "Overall process took 24 minutes 33.44 seconds.\n"
+     ]
+    }
+   ],
    "source": [
     "# Prepare to continuously sample and save each bitstring to a file.\n",
     "output_file = \"./tensor_networks/samples.txt\"\n",
@@ -320,18 +367,18 @@
     "    # Maintain position-wise counts for majority vote.\n",
     "    position_counts = [defaultdict(int) for _ in range(num_qubits)]\n",
     "    rng = np.random.default_rng(42)\n",
-    "    sample_batch_size = 1  # One sample per batch.\n",
     "    sample_count = 0\n",
+    "    found = False  # Flag to indicate when the target bitstring is achieved.\n",
     "\n",
     "    # Continuous sampling loop.\n",
     "    while True:\n",
     "        sample_iter_start = time.perf_counter()\n",
     "        # Generate one sample.\n",
     "        for b in tensor_network_circuit.sample_gate_by_gate(\n",
-    "            sample_batch_size,\n",
-    "            group_size=5,\n",
+    "            subset_num_qubits,\n",
+    "            group_size=group_size,\n",
     "            optimize=opt,\n",
-    "            simplify_sequence=\"ADCRS\",\n",
+    "            simplify_sequence=simplify_sequence,\n",
     "            seed=rng\n",
     "        ):\n",
     "            sample_iter_end = time.perf_counter()\n",
@@ -352,10 +399,16 @@
     "            if current_vote == target_bitstring:\n",
     "                solution_time = time.perf_counter() - sample_loop_start\n",
     "                print(f\"\\nTarget bitstring achieved after {sample_count} samples in {format_time(solution_time)}.\")\n",
+    "                found = True\n",
+    "                break\n",
     "\n",
     "            # Reset timer for next sample.\n",
     "            sample_iter_start = time.perf_counter()\n",
     "            \n",
+    "        # Exit the loop if target bitstring is achieved.\n",
+    "        if found:\n",
+    "            break\n",
+    "\n",
     "        # Log total sampling time every 10 samples.\n",
     "        if sample_count % 10 == 0:\n",
     "            current_time = time.perf_counter()\n",
@@ -363,7 +416,7 @@
     "            print(f\"Processed {sample_count} samples in {format_time(elapsed)}.\")\n",
     "\n",
     "overall_end = time.perf_counter()\n",
-    "print(f\"Overall process took {format_time(overall_end - overall_start)}.\")"
+    "print(f\"Overall process took {format_time(overall_end - sample_loop_start)}.\")"
    ]
   }
  ],
